@@ -1,3 +1,9 @@
+2000-08-17  Ross Johnson  <rpj@special.ise.canberra.edu.au>
+
+	* create2.c: New; Test that pthread_t contains
+	the W32 HANDLE before it calls the thread routine
+	proper.
+
 2000-08-13  Ross Johnson  <rpj@special.ise.canberra.edu.au>
 
 	* condvar3.c: Minor change to eliminate compiler
